♻️ fix slider view on mobile ♻️

--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,4 +1,10 @@
 .root {
   position: relative;
+
+  @media (width <= 900px) {
+    padding: 24px 0;
+
+  }
+
 }
 
